--- a/vignettes/clustering.Rmd
+++ b/vignettes/clustering.Rmd
@@ -127,10 +127,14 @@ motif_data <- sl_motifs %>%
   mutate(is_present = TRUE) %>%
   select(painting_code, ancestor, is_present) %>% 
   distinct() %>% 
-  spread(key = ancestor, value = is_present, fill = FALSE, drop = FALSE)
+  spread(key = ancestor, value = is_present, fill = FALSE, drop = FALSE) %>% 
+  inner_join(select(sldb, painting_code, artist, painting_description, year), by = "painting_code") %>% 
+  mutate(label = paste(painting_code, artist, painting_description, year, sep = "<br>"))
 
-motif_matrix <- motif_data %>% select(-painting_code)
+motif_matrix <- motif_data %>% select(-painting_code, -artist, -painting_description, -year, -label)
+```
 
+```{r motif_distance}
 symm_motif_dist <- daisy(motif_matrix, type = list(symm = 1:ncol(motif_matrix)))
 clust_motif_dist <- hclust(symm_motif_dist)
 plot(clust_motif_dist, labels = motif_data$painting_code)
@@ -145,7 +149,7 @@ pca_projection <- motif_matrix %>%
   prcomp() %>% 
   predict(object = ., newdata = motif_matrix)
 
-# just project into the first 2 PCA axes
+# just project into the first 2dis PCA axes
 pca_df <- as.data.frame(pca_projection[,1:3]) %>% 
   mutate(cluster = cutree(clust_motif_dist, k = 10))
 
@@ -159,7 +163,12 @@ Above are projected the first two dimensions.
 We can do 3 as well:
 
 ```{r motif_pca3d, cache=FALSE}
-scatterplot3js(pca_df$PC1, pca_df$PC2, pca_df$PC3)
+scatterplot3js(
+  pca_df$PC1, 
+  pca_df$PC2, 
+  pca_df$PC3, 
+  color = col_factor(hue_pal()(10), domain = NULL)(pca_df$cluster),
+  labels = motif_data$label)
 ```
 
 Needed improvements:
