packages for vignette

--- a/vignettes/clustering.Rmd
+++ b/vignettes/clustering.Rmd
@@ -14,7 +14,7 @@ library(dutchtabletops)
 library(dplyr)
 library(tidyr)
 library(stringr)
-library(purrr)
+library(scales)
 library(ggplot2)
 library(cluster)
 library(knitr)
