--- a/vignettes/clustering.Rmd
+++ b/vignettes/clustering.Rmd
@@ -131,36 +131,97 @@ motif_data <- sl_motifs %>%
   inner_join(select(sldb, painting_code, artist, painting_description, year), by = "painting_code") %>% 
   mutate(label = paste(painting_code, artist, painting_description, year, sep = "<br>"))
 
-motif_matrix <- motif_data %>% select(-painting_code, -artist, -painting_description, -year, -label)
+motif_matrix <- motif_data %>% select(-painting_code, -artist, -painting_description, -year, -label) %>% data.matrix()
 ```
+
+We want to treat the existence/non-existence of a given motif as _binary_.
+The variable is binary because, at least in this current encoding, the painting either has the motif (and its ancestors), or it does not.
+However, we need to distinguish between _symmetric_ or _asymmetric_ binary.
+A binary variable is symmetric when either the presence or the absence of that trait tells you something meaningful about the class of objects that share it.
+If we treat motif presence as symmetric, this means that we would consider true two statements:
+
+1. Paintings that all feature a human skull comprise a meaningful group, 
+2. Paintings that _do not_ feature a human skull are also a meaningful group.
+
+Both presence and absence are thus equally weighted when judging how close or distant two objects are within the motif space.
+On the other hand, a binary variable is asymmetric when its presence tells you more than its absence.
+E.g. paitings that all feature human skulls are a meaningful group, but paintings that do not feature a human skull may not have much else in common.[^symmnote]
+
+I would provisionally argue that motifs are an asymmetric binary variable.
+Just because a set of paintings lack an hourglass does not tell us anything meaningful about their set as a whole.
+That said, one might argue that absence can be as meaningful as presence, particularly with regards to _vanitas_ motifs.
+We can certainly compare the results of treating motif presence as symmetric and also asymmetric.
+It is also possible (at the cost of introducing a lot more arbitrary decision making) to code certain motifs as symmetric, and certain motifs as asymmetric.
+
+[^symmnote]: See ["Symmetric versus Asymmetric Nominal Variables"](http://support.sas.com/documentation/cdl/en/statug/63033/HTML/default/viewer.htm#statug_distance_sect003.htm)
+
 
 ```{r motif_distance}
 symm_motif_dist <- daisy(motif_matrix, type = list(symm = 1:ncol(motif_matrix)))
-clust_motif_dist <- hclust(symm_motif_dist)
-plot(clust_motif_dist, labels = motif_data$painting_code)
-rect.hclust(clust_motif_dist, k = 10, border = "red")
+symm_motif_clust <- hclust(symm_motif_dist, method = "ward.D")
+
+asymm_motif_dist <- daisy(motif_matrix, type = list(asymm = 1:ncol(motif_matrix)))
+asymm_motif_clust <- hclust(asymm_motif_dist, method = "ward.D")
+```
+
+```{r motif_symm_dendrogram}
+n_clust <- 10
+
+# Symmetric binary
+plot(symm_motif_clust, labels = FALSE)
+rect.hclust(symm_motif_clust, k = n_clust, border = "red")
+```
+
+```{r motif_asymm_dendrogram}
+# Asymetric binary
+plot(asymm_motif_clust, labels = FALSE)
+rect.hclust(asymm_motif_clust, k = n_clust, border = "red")
 ```
 
 Principal component analysis is another way to visualize these clusterings.
 
 ```{r motif_pca}
-pca_projection <- motif_matrix %>% 
-  as.matrix() %>% 
-  prcomp() %>% 
-  predict(object = ., newdata = motif_matrix)
+pca <- prcomp(motif_matrix)
+pca_projection <- predict(pca, newdata = motif_matrix)
 
 # just project into the first 2dis PCA axes
 pca_df <- as.data.frame(pca_projection[,1:3]) %>% 
-  mutate(cluster = cutree(clust_motif_dist, k = 10))
+  mutate(cluster = cutree(symm_motif_clust, k = 10))
 
 ggplot(pca_df, aes(x = PC1, y = PC2, color = as.factor(cluster))) +
-  geom_point(size = 3, alpha = 0.5) +
-  theme_bw()
+  geom_point(size = 5, alpha = 0.5) +
+  theme_bw() +
+  theme(legend.position = "none")
+```
+
+How much weight does a given motif have in the principal component?
+This "variable loading" suggests which motifs are a strong determining factor in creating clusterings.
+
+Which motifs tend to show up in just one set of artworks?
+
+```{r motif_pca_loadings}
+loadings <- pca$rotation %>% 
+  as.data.frame() %>% 
+  mutate(code = rownames(pca$rotation), l1 = abs(PC1))
+
+loadings %>% 
+  top_n(16, l1) %>% 
+  select(code, l1) %>% 
+  kable()
+```
+
+Which motifs have the lowest loadings, and tend to show up just about anywhere?
+
+```{r}
+loadings %>% 
+  top_n(16, desc(l1)) %>% 
+  select(code, l1) %>% 
+  kable()
 ```
 
 These data are $N$-dimensional (or, in our case specifically, 254-dimensional); but each additional dimension has less and less power.
 Above are projected the first two dimensions.
-We can do 3 as well:
+We can do 3 as well (colored by clustered group):
 
 ```{r motif_pca3d, cache=FALSE}
 scatterplot3js(
@@ -168,13 +229,16 @@ scatterplot3js(
   pca_df$PC2, 
   pca_df$PC3, 
   color = col_factor(hue_pal()(10), domain = NULL)(pca_df$cluster),
-  labels = motif_data$label)
+  labels = motif_data$label,
+  renderer = "canvas",
+  stroke = NULL)
 ```
 
 Needed improvements:
 
 - The way that I've induced a hierarchy from the coding system is flawed, as it assumes that each character signifies a new level, whereas some levels have a two-character abbreviation. This is pretty easy to fix.
 - Not all the artworks have been consistently tagged. Any use of `XXX and XXX` instead of `XXX; XXX; XXX` croaks my parser. This is only 30-something artworks, so easily fixable.
+- Let's get a table mapping full labels to each abbreviated code.
 
 ## Stylistic clustering
 
