--- a/vignettes/clustering.Rmd
+++ b/vignettes/clustering.Rmd
@@ -191,7 +191,7 @@ pca_df <- as.data.frame(pca_projection[,1:3]) %>%
 ggplot(pca_df, aes(x = PC1, y = PC2, color = as.factor(cluster))) +
   geom_point(size = 5, alpha = 0.5) +
   theme_bw() +
-  theme(legend.position = "none")
+  theme(legend.position = "bottom")
 ```
 
 How much weight does a given motif have in the principal component?
@@ -239,6 +239,24 @@ Needed improvements:
 - The way that I've induced a hierarchy from the coding system is flawed, as it assumes that each character signifies a new level, whereas some levels have a two-character abbreviation. This is pretty easy to fix.
 - Not all the artworks have been consistently tagged. Any use of `XXX and XXX` instead of `XXX; XXX; XXX` croaks my parser. This is only 30-something artworks, so easily fixable.
 - Let's get a table mapping full labels to each abbreviated code.
+
+```{r motif_clusterboot}
+library(fpc)
+n_clust <- 10
+boot_clust <- clusterboot(asymm_motif_dist, clustermethod = hclustCBI, method = "ward.D2", k = n_clust)
+summary(boot_clust$result)
+cluster_stability <- data_frame(cluster = 1:10, stability = boot_clust$bootmean)
+```
+
+```{r motif_clusterboot_plot}
+pca_df %>% 
+  mutate(cluster = boot_clust$partition) %>% 
+  inner_join(cluster_stability, by = "cluster") %>% 
+  ggplot(aes(x = PC1, y = PC2, color = as.factor(cluster), alpha = stability > 0.6)) +
+  geom_point(size = 5) +
+  theme_bw() +
+  theme(legend.position = "bottom")
+```
 
 ## Stylistic clustering
 
