--- a/vignettes/clustering.Rmd
+++ b/vignettes/clustering.Rmd
@@ -20,54 +20,61 @@ library(cluster)
 library(knitr)
 library(threejs)
 library(purrr)
-opts_chunk$set(message = FALSE, warning = FALSE, cache = TRUE, fig.width = 7, fig.height = 6)
+library(DT)
+opts_chunk$set(message = FALSE, warning = FALSE, cache = FALSE, fig.width = 7, fig.height = 6)
 ```
 
 Let's take a look at some of the basic dimensions of this dataset:
 
 ```{r basic_metrics}
 # Major artists
-sldb %>% 
+dt_paintings %>% 
   count(artist, sort = TRUE) %>% 
   mutate(artist = c(artist[1:10], rep("other", length(artist) - 10))) %>% 
   group_by(artist) %>% 
   summarize(n = sum(n)) %>% 
   arrange(desc(n)) %>% 
   kable()
+```
 
+```{r}
 # Thematic formats
-sldb %>% 
+dt_paintings %>% 
   count(thematic_format, sort = TRUE) %>% 
   kable()
+```
 
+- Can probably reduce the number different categories
+
+```{r}
 # Compositional Format
-sldb %>% 
+dt_paintings %>% 
   count(compositional_format, sort = TRUE) %>% 
   kable()
 
 # Compositional disposition
-sldb %>% 
+dt_paintings %>% 
   count(compositional_disposition, sort = TRUE) %>% 
   kable()
 
 # Compositional cropping
-sldb %>% 
+dt_paintings %>% 
   count(compositional_cropping, sort = TRUE) %>% 
   kable()
 
 # Compositional viewpoint
-sldb %>% 
-  count(compositional_cropping, sort = TRUE) %>% 
+dt_paintings %>% 
+  count(compositional_viewpoint, sort = TRUE) %>% 
   kable()
 
 # Dimensions
-ggplot(sldb, aes(x = width, y = height, color = compositional_format)) + 
+ggplot(dt_paintings, aes(x = width, y = height, color = compositional_format)) + 
   geom_point() + 
   annotate("segment", x = 0, y = 0, xend = 300, yend = 300) + 
   xlim(0, 225) + ylim(0, 225)
 
 # Distribution of works in time
-ggplot(sldb, aes(x = year)) + geom_histogram()
+ggplot(dt_paintings, aes(x = year)) + geom_histogram()
 ```
 
 Note that, at the moment, paintings coded as early, mid, late, etc. are all grouped into the one year that they reference.
@@ -90,8 +97,8 @@ From this, we can calculate an easy dissimilarity matrix calculating manhattan b
 This can also later be enahnced with hierarchical information.
 For example, Item with motif `AC1` would have a mark for `A`, `AC`, and `AC1`, granting it some shared similarity to an object with `AC2`, and even to object with `AB3`.
 
-```{r motif_hierarchy}
-code_hierarchy <- sl_motifs %>%
+```{r motif_hierarchy, eval=FALSE}
+code_hierarchy <- dt_motifs %>%
   select(ex_code) %>% 
   filter(!is.na(ex_code)) %>% 
   distinct() %>% 
@@ -109,7 +116,7 @@ code_hierarchy <- sl_motifs %>%
   arrange(ex_code, ancestor)
 
 # An example of what this hierarchy looks like in practice:
-sldb %>% 
+dt_paintings %>% 
   filter(painting_code == "FvS 29") %>% 
   inner_join(sl_motifs, by = "painting_code") %>% 
   inner_join(code_hierarchy, by = "ex_code") %>% 
@@ -121,7 +128,7 @@ With a hierarchy defined, we now create a table with one row per object, one col
 Each cell is `TRUE`/`FALSE`.
 From this boolean matrix, we can calculate the multidimensional distance between each row; a prerequisite to applying clustering techniques.s
 
-```{r motifs_per_object}
+```{r motifs_per_object, eval=FALSE}
 motif_data <- sl_motifs %>% 
   filter(!is.na(ex_code)) %>% 
   left_join(code_hierarchy, by = "ex_code") %>% 
@@ -129,7 +136,7 @@ motif_data <- sl_motifs %>%
   select(painting_code, ancestor, is_present) %>% 
   distinct() %>% 
   spread(key = ancestor, value = is_present, fill = FALSE, drop = FALSE) %>% 
-  inner_join(select(sldb, painting_code, artist, painting_description, year), by = "painting_code") %>% 
+  inner_join(select(dt_paintings, painting_code, artist, painting_description, year), by = "painting_code") %>% 
   mutate(label = paste(painting_code, artist, painting_description, year, sep = "<br>"))
 
 motif_matrix <- motif_data %>% select(-painting_code, -artist, -painting_description, -year, -label) %>% data.matrix()
@@ -157,7 +164,7 @@ It is also possible (at the cost of introducing a lot more arbitrary decision ma
 [^symmnote]: See ["Symmetric versus Asymmetric Nominal Variables"](http://support.sas.com/documentation/cdl/en/statug/63033/HTML/default/viewer.htm#statug_distance_sect003.htm)
 
 
-```{r motif_distance}
+```{r motif_distance, eval=FALSE}
 symm_motif_dist <- daisy(motif_matrix, type = list(symm = 1:ncol(motif_matrix)))
 symm_motif_clust <- hclust(symm_motif_dist, method = "ward.D")
 
@@ -165,7 +172,7 @@ asymm_motif_dist <- daisy(motif_matrix, type = list(asymm = 1:ncol(motif_matrix)
 asymm_motif_clust <- hclust(asymm_motif_dist, method = "ward.D")
 ```
 
-```{r motif_symm_dendrogram}
+```{r motif_symm_dendrogram, eval=FALSE}
 n_clust <- 10
 
 # Symmetric binary
@@ -173,21 +180,29 @@ plot(symm_motif_clust, labels = FALSE)
 rect.hclust(symm_motif_clust, k = n_clust, border = "red")
 ```
 
-```{r motif_asymm_dendrogram}
+```{r motif_asymm_dendrogram, eval=FALSE}
 # Asymetric binary
 plot(asymm_motif_clust, labels = FALSE)
 rect.hclust(asymm_motif_clust, k = n_clust, border = "red")
 ```
 
+```{r, cache = FALSE, eval=FALSE}
+motif_data %>% 
+  mutate(group = cutree(asymm_motif_clust, k = n_clust)) %>% 
+  select(group, painting_code, painting_description, artist, year) %>% 
+  datatable()
+```
+
 Principal component analysis is another way to visualize these clusterings.
 
-```{r motif_pca}
+```{r motif_pca, eval=FALSE}
 pca <- prcomp(motif_matrix)
-pca_projection <- predict(pca, newdata = motif_matrix)
+prin <- princomp(motif_matrix)
+tpca_projection <- predict(pca, newdata = motif_matrix)
 
 # just project into the first 2dis PCA axes
 pca_df <- as.data.frame(pca_projection[,1:3]) %>% 
-  mutate(cluster = cutree(symm_motif_clust, k = 10))
+  mutate(cluster = cutree(symm_motif_clust, k = 6))
 
 ggplot(pca_df, aes(x = PC1, y = PC2, color = as.factor(cluster))) +
   geom_point(size = 5, alpha = 0.5) +
@@ -200,7 +215,7 @@ This "variable loading" suggests which motifs are a strong determining factor in
 
 Which motifs tend to show up in just one set of artworks?
 
-```{r motif_pca_loadings}
+```{r motif_pca_loadings, eval=FALSE}
 loadings <- pca$rotation %>% 
   as.data.frame() %>% 
   mutate(code = rownames(pca$rotation), l1 = abs(PC1))
@@ -213,7 +228,7 @@ loadings %>%
 
 Which motifs have the lowest loadings, and tend to show up just about anywhere?
 
-```{r}
+```{r, eval=FALSE}
 loadings %>% 
   top_n(16, desc(l1)) %>% 
   select(code, l1) %>% 
@@ -224,12 +239,12 @@ These data are $N$-dimensional (or, in our case specifically, 254-dimensional); 
 Above are projected the first two dimensions.
 We can do 3 as well (colored by clustered group):
 
-```{r motif_pca3d, cache=FALSE}
+```{r motif_pca3d, cache=FALSE, eval=FALSE}
 scatterplot3js(
   pca_df$PC1, 
   pca_df$PC2, 
   pca_df$PC3, 
-  color = col_factor(hue_pal()(10), domain = NULL)(pca_df$cluster),
+  color = col_factor(hue_pal()(6), domain = NULL)(pca_df$cluster),
   labels = motif_data$label,
   renderer = "canvas",
   stroke = NULL)
@@ -242,7 +257,7 @@ Needed improvements:
 - Let's get a table mapping full labels to each abbreviated code.
 - We also don't want to run just one cluster, but instead run it many times to see which clusters are _stable_ (constantly reappearing) and which are fugitive. This can be done with `clusterboot()`
 
-```{r motif_clusterboot}
+```{r motif_clusterboot, eval=FALSE}
 library(fpc)
 n_clust <- 6
 boot_clust <- clusterboot(asymm_motif_dist, clustermethod = hclustCBI, method = "ward.D2", k = n_clust, count = FALSE)
@@ -250,7 +265,7 @@ summary(boot_clust$result)
 cluster_stability <- data_frame(cluster = 1:n_clust, stability = boot_clust$bootmean)
 ```
 
-```{r motif_clusterboot_plot}
+```{r motif_clusterboot_plot, eval=FALSE}
 pca_df %>% 
   mutate(cluster = boot_clust$partition) %>% 
   inner_join(cluster_stability, by = "cluster") %>% 
@@ -260,14 +275,3 @@ pca_df %>%
   theme(legend.position = "bottom")
 ```
 
-## Stylistic clustering
-
-```{r style_distance}
-clustering_vars <- c("compositional_format", "compositional_disposition", "compositional_cropping", "compositional_viewpoint")
-complete_dat <- sldb[complete.cases(sldb[,clustering_vars]),]
-clust_dat <- complete_dat[,clustering_vars]
-clust_dat <- clust_dat %>% map(as.factor)
-style_distance <- daisy(clust_dat)
-style_cluster <- hclust(style_distance)
-plot(style_cluster)
-```
